--- a/lms/templates/pdf_viewer.html
+++ b/lms/templates/pdf_viewer.html
@@ -3,7 +3,7 @@
 <%namespace name='static' file='static_content.html'/>
 <%!
 from openedx.core.djangolib.js_utils import (
-    dump_js_escaped_json, js_escaped_string
+    js_escaped_string
 )
 %>
 <!--
