--- a/lms/templates/help_modal.html
+++ b/lms/templates/help_modal.html
@@ -73,9 +73,9 @@ from xmodule.tabs import CourseTabList
     <hr>
 
     <div class="help-buttons">
-      <button type="button" id="feedback_link_problem">${_('Report a problem')}</button>
-      <button type="button" id="feedback_link_suggestion">${_('Make a suggestion')}</button>
-      <button type="button" id="feedback_link_question">${_('Ask a question')}</button>
+      <button type="button" class="" id="feedback_link_problem">${_('Report a problem')}</button><br />
+      <button type="button" class="" id="feedback_link_suggestion">${_('Make a suggestion')}</button><br />
+      <button type="button" class="" id="feedback_link_question">${_('Ask a question')}</button>
     </div>
 
     <p class="note">${_('Please note: The {platform_name} support team is English speaking. While we will do our best to address your inquiry in any language, our responses will be in English.').format(
