--- a/lms/templates/static_pdfbook.html
+++ b/lms/templates/static_pdfbook.html
@@ -19,7 +19,7 @@ from openedx.core.djangolib.js_utils import (
 <%include file="/courseware/course_navigation.html" args="active_page='pdftextbook/{0}'.format(book_index)" />
 <script>
 $(function(){
-  $('a.chapter').click(function(e){
+  $('.chapter').click(function(e){
     e.preventDefault();
     var url = $(this).attr('rel');
     $('#viewer-frame').attr({
